# md2word

./: .gitignore  LICENSE  README.md  README_zh.md  md2word_demo.spec  md2word_demo_console.spec  pyproject.toml
.github/workflows/: desktop_release.yml  publish.yml
examples/: config_chinese.json  config_english.json  example.md  example_zh.md
examples/desktop_app/: README.md  app.py  index.html
skills/md2word/: SKILL.md
skills/md2word/evals/: evals.json
skills/md2word/references/: config_reference.md
src/md2word/: __init__.py  __main__.py  config.py  converter.py  latex.py
src/md2word/conversion/: __init__.py  blocks.py  common.py  images.py  markdown.py  numbering.py  styles.py  toc.py
tests/: __init__.py  test_config.py  test_converter.py  test_latex.py
